final de ejemplo de pagina con navegacion responsive

--- a/Clase6/index.html
+++ b/Clase6/index.html
@@ -48,7 +48,7 @@
             <p>MAY THE FORCER BE WITH YOU!!</p>
             <p>MY YOUNG PADAWAN!!!</p>
         </section>
-        <section class="singup">
+        <section class="signup">
             <form action="#">
                 <input type="text" placeholder="Tu nombre" name="" id="">
                 <input type="email" placeholder="Tu email" name="" id="">
@@ -60,6 +60,7 @@
         </footer>
 
     </div>
+    <script src="./style.js"></script>
 </body>
 
 </html>
