--- a/Tareas/1. Ejercicio - Semana 2 [Wireframes - HTML5 - CSS]/index.html
+++ b/Tareas/1. Ejercicio - Semana 2 [Wireframes - HTML5 - CSS]/index.html
@@ -12,12 +12,12 @@
         <article class="login">
             <img class="login__img" src="Vanina Ariño - mockuplogin1.png" alt="Imagen Login">
             <h1 class="login__h1"> Iniciar Sesión</h1>
-            <form class="login__form" action="#">
-                <input class="input__text" type="email" placeholder="Email">
-                <input class="input__password" type="password" placeholder="Password">
-                <button class="login__button login__button--blue" type="submit">ENTRAR</button>
+            <form class="form" action="#">
+                <input class="form__input form__input--big" type="email" placeholder="Email">
+                <input class="form__input form__input--big" type="password" placeholder="Password">
+                <button class="button button--blue button--big" type="submit">ENTRAR</button>
             </form>
-            <a class="login__forgot" href="#">Olvidé mi password</a>
+            <a class="button__forgot" href="#">Olvidé mi password</a>
         </article>
 </body>
 </html>
