--- a/Clase9/proyectoClase.html
+++ b/Clase9/proyectoClase.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <div class="contenedor">
+    <div class="wrapper">
+        <header class="header">
+            <h1>Hola soy un Header</h1>
+        </header>
+        
+    <div class="contenedor-grid">
         <div class="card">
             <img class="card__imagen" src="http://source.unsplash.com/random/300x300?v=1">
             <div class="card__details">
@@ -66,6 +71,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, odit.</p>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
