Subiendo el segundo trabajo

--- a/Tareas/1. Ejercicio - Semana 2 [Wireframes - HTML5 - CSS]/index.html
+++ b/Tareas/1. Ejercicio - Semana 2 [Wireframes - HTML5 - CSS]/index.html
@@ -13,8 +13,8 @@
             <img class="login__img" src="Vanina Ariño - mockuplogin1.png" alt="Imagen Login">
             <h1 class="login__h1"> Iniciar Sesión</h1>
             <form class="form" action="#">
-                <input class="form__input form__input--big" type="email" placeholder="Email">
-                <input class="form__input form__input--big" type="password" placeholder="Password">
+                <input class="form__input form__input--big form__input--topR" type="email" placeholder="Email">
+                <input class="form__input form__input--big form__input--bottomR" type="password" placeholder="Password">
                 <button class="button button--blue button--big" type="submit">ENTRAR</button>
             </form>
             <a class="button__forgot" href="#">Olvidé mi password</a>
